# Edge-sbc-reliability-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
configs/: benchmark_pack_standard.yaml  pi5_onnx_burst.yaml  pi5_onnx_sustained_10min.yaml  pi5_tflite_burst.yaml  pi5_thermal_stress_20min.yaml
docs/: ARCHITECTURE.md  BENCHMARKING_GUIDE.md  CONTRIBUTING.md  METHODOLOGY.md  POWER_METHODOLOGY.md  QUICKSTART.md  REPRODUCIBILITY.md  ROADMAP.md  THERMAL_METHODOLOGY.md
models/: .gitkeep  README.md
scripts/: create_test_model.py  run_all.sh  run_quick_test.py  run_sustained_test.py  set_performance_governor.sh
src/edge_sbc_reliability_lab/: __init__.py  cli.py
src/edge_sbc_reliability_lab/analysis/: __init__.py  build_leaderboard.py  compare_runs.py  fairness_checker.py  latency_vs_temp.py  reliability_summary.py  runtime_comparison.py  summarize_results.py  sustained_drift.py
src/edge_sbc_reliability_lab/core/: __init__.py  config.py  logging_utils.py  output.py  runner.py  statistics.py  timestamps.py
src/edge_sbc_reliability_lab/inference/: __init__.py  common.py  model_loader.py  run_onnx.py  run_tflite.py  run_torch.py  runtime_interface.py
src/edge_sbc_reliability_lab/platform/: __init__.py  environment_capture.py  governor_check.py  pi_metadata.py  system_snapshot.py
src/edge_sbc_reliability_lab/power/: __init__.py  energy_analysis.py  external_meter_adapter.py  utilization_power_proxy.py
src/edge_sbc_reliability_lab/reproducibility/: __init__.py  environment_validator.py  manifest_generator.py  run_all.py
src/edge_sbc_reliability_lab/scripts/: __init__.py  pre_run_health_check.py  run_benchmark_pack.py
src/edge_sbc_reliability_lab/thermal/: __init__.py  drift_analysis.py  freq_logger.py  temp_logger.py  throttle_detector.py
src/edge_sbc_reliability_lab/workloads/: __init__.py  burst_runner.py  mixed_load_runner.py  stress_background.py  sustained_runner.py
tests/: __init__.py  test_core.py  test_inference.py  test_quick_validation.py  test_thermal.py
